--- a/platforms/android/assets/www/templates/newEntryTMPL.html
+++ b/platforms/android/assets/www/templates/newEntryTMPL.html
@@ -2,9 +2,11 @@
   <ion-content>
     <div id="name_input" class="list list-inset">
       <label class="item item-input">
+        <span class="input-label">First Name</span>
         <input type="text" placeholder="First Name" ng-model="person.first">
       </label>
       <label class="item item-input">
+        <span class="input-label">Last Name</span>
         <input type="text" placeholder="Last Name" ng-model="person.last">
       </label>
     </div>
