--- a/platforms/android/assets/www/templates/updateReservationTMPL.html
+++ b/platforms/android/assets/www/templates/updateReservationTMPL.html
@@ -1,16 +1,16 @@
 <ion-view view-title="Update Reservations">
   <ion-content>
     <div class="list list-inset" ng-repeat-start="thing in currentList.list track by $index">
-      <div class="item">
+      <div class="item item-divider">
         {{thing.firstName}} {{thing.lastName}}
         <!-- <ion-checkbox ng-repeat="item in currentList" ng-model="item.checked" ng-checked="item.checked">{{item.}}</ion-checkbox> -->
       </div>
       <!-- <div class="item">
         {{thing.telephone}}
       </div> -->
-      <ion-checkbox ng-model="item.ready" ng-checked='item.ready'>Reservation ready</ion-checkbox>
-      <ion-checkbox ng-model="item.cancelled" ng-checked="item.cancelled">Cancel Reservation</ion-checkbox>
-        <button class="button button-block button-assertive">Submit</button>
+      <ion-radio ng-model="thing.ready" ng-value='true'>Reservation ready</ion-radio>
+      <ion-radio ng-model="thing.cancelled" ng-value='true'>Cancel Reservation</ion-radio>
+      <button class="button button-block button-assertive" ng-click="delete($index)">Submit</button>
     </div>
     <div ng-repeat-end>
     </div>
