--- a/platforms/ios/www/css/ionic.app.css
+++ b/platforms/ios/www/css/ionic.app.css
@@ -6253,12 +6253,10 @@ input[type="radio"][disabled], input[type="checkbox"][disabled], input[type="rad
   left: -9999px; }
   .item-radio input:checked ~ .item-content {
     /* style the item content when its checked */
-    background: #03C03C;
-    font-weight: bold;
-    color:white;}
+    background: #f7f7f7; }
   .item-radio input:checked ~ .radio-icon {
     /* show the checkmark icon when its checked */
-    visibility: invisible; }
+    visibility: visible; }
 
 .platform-android.grade-b .item-radio, .platform-android.grade-c .item-radio {
   -webkit-animation: androidCheckedbugfix infinite 1s; }
