--- a/platforms/ios/www/templates/followUpTMPL.html
+++ b/platforms/ios/www/templates/followUpTMPL.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Follow Up">
   <ion-content>
-    <div class="list list-inset" ng-repeat-start="thing in archiveList track by $index">
+    <div class="list list-inset" ng-repeat-start="thing in archiveList.list track by $index">
       <div class="item item-divider">
         {{thing.firstName}} {{thing.lastName}}
       </div>
