--- a/platforms/ios/www/templates/updateReservationTMPL.html
+++ b/platforms/ios/www/templates/updateReservationTMPL.html
@@ -9,6 +9,8 @@
         {{thing.telephone}}
       </div> -->
       <ion-radio ng-model="thing.ready" ng-value='true'>Reservation ready</ion-radio>
+      <ion-radio ng-model="thing.issueActive" ng-value='true'>Issue in reservation</ion-radio>
+      <ion-radio ng-model="thing.issueActive" ng-value="false" ng-show="thing.issueActive">Issue resolved</ion-radio>
       <ion-radio ng-model="thing.cancelled" ng-value='true'>Cancel Reservation</ion-radio>
       <button class="button button-block button-balanced" ng-click="delete($index)">Submit</button>
     </div>
