--- a/platforms/ios/www/templates/reservationPopover.html
+++ b/platforms/ios/www/templates/reservationPopover.html
@@ -2,8 +2,8 @@
   <ion-content>
     <div class="list">
       <div class="item item-divider">Make reservation at </div>
-      <div class="item item-text-wrap" ng-click="openTimePicker()">
-        Click here
+      <div class="item item-text-wrap" ng-click="openTimePicker()" ng-model="person.timed">
+        Click Here {{person.timed}}
       </div>
     </div>
   </ion-content>
